--- a/sass/cd/cd-header/_cd-search.scss
+++ b/sass/cd/cd-header/_cd-search.scss
@@ -145,6 +145,11 @@
   right: 10px;
 }
 
+// Safari fix.
+.cd-search__input::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
 .cd-search__submit {
   align-items: center;
   background: $cd-dark-grey;
@@ -170,7 +175,8 @@
     margin: 0 auto;
   }
 
-  &.js-has-focus {
+  &.js-has-focus,
+  &:focus {
     background-color: $cd-highlight-red;
   }
 }
